updated alignment issues for the home page

--- a/style.css
+++ b/style.css
@@ -25,6 +25,9 @@
 .w-35{
     width: 30%;
 }
+.mar-right{
+    margin-right: -60px !important;
+}
 #textDiv {
     transition: opacity 0.5s ease-in-out; /* Fade transition */
     opacity: 1;
@@ -37,8 +40,8 @@
     padding-left: 0px !important;
     padding-right: 0px !important;
 }
-#textHolder{
-    font-size: clamp(60px, 10vw, 150px);
+#textHolder1{
+    /* height: clamp(60px, 10vw, 150px); */
     /* font-weight: bolder; */
     width: 100%;
     text-align: center;
@@ -46,7 +49,19 @@
     border-bottom:1px solid black;
     line-height: 0.85;
     font-family: Anton, sans-serif;
-    font-weight: bolder;
+    font-weight: 400;
+    font-style: normal;
+}
+#textHolder{
+    font-size: clamp(60px, 10vw, 150px);
+    /* font-weight: bolder; */
+    width: 100%;
+    text-align: center;
+    /* border-top:1px solid black; */
+    /* border-bottom:1px solid black; */
+    line-height: 0.85;
+    font-family: Anton, sans-serif;
+    font-weight: 400;
     font-style: normal;
 }
 .serviceTitle{
@@ -66,7 +81,7 @@
     margin-right: 0px;
 }
 .text-end{
-    margin-left: 80px;
+    margin-left: 0px;
 }
 .fade-out {
     opacity: 0; /* Fade out */
@@ -232,13 +247,19 @@ select {
 @media (min-width: 481px) and (max-width: 768px) {
     /* Styles for small tablets */
     #smallText{
-        margin-right: clamp(100px, 0px,10px);
+        margin-right: clamp(100px, 0px,10px) !important;
+    }
+    .text-end{
+        margin-left: 110px;
     }
   }
 
   @media (max-width: 480px) {
     /* Styles for mobile phones */
     #smallText{
-        margin-right: clamp(100px, 0px,10px);
+        margin-right: clamp(100px, 0px,10px) !important;
+    }
+    .text-end{
+        margin-left: 110px;
     }
   }
